@@ -9,7 +9,8 @@ Features
 
 Latest Update: 4.5.3
   FIXES
-  - Video information may fail to load (again!). This was due to new security features introduced in Chrome 76 causing network requests to fail.
+  - Video information may fail to load (again!). This was due to new security features introduced in Chrome 76 causing network requests to fail
+  - Playlist browse button on top left can now be seen again when a playlist is loaded
 
 The full version history can be found on GitHub.
 
